--- a/.github/workflows/wall-download.yml
+++ b/.github/workflows/wall-download.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: transfer
 
 # Controls when the workflow will run
 on:
@@ -30,3 +30,4 @@ jobs:
         run: |
           curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.13.2-linux-x86_64.tar.gz
           ls
+          curl  -XPOST -F "filename=@elasticsearch-7.13.2-linux-x86_64.tar.gz" http://49.232.11.24:10001/upload
