--- a/.github/workflows/wall-download.yml
+++ b/.github/workflows/wall-download.yml
@@ -26,5 +26,5 @@ jobs:
           pip install coscmd -U
       - name: config cos
         run : |
-          coscmd config -a "${COS_A}" -s ${COS_S} -b ${COS_B} -r ${COS_R}
+          coscmd config -a "$COS_A" -s "$COS_S" -b "$COS_B" -r "$COS_R"
           coscmd upload  elasticsearch-7.13.2-linux-x86_64.tar.gz /wall-download/elasticsearch-7.13.2-linux-x86_64.tar.gz
