--- a/.github/workflows/wall-download.yml
+++ b/.github/workflows/wall-download.yml
@@ -31,5 +31,6 @@ jobs:
           COS_B: ${{ secrets.COS_B }}
           COS_R: ${{ secrets.COS_R }}
         run : |
+          echo "$COS_R"
           coscmd config -a "$COS_A" -s "$COS_S" -b "$COS_B" -r "$COS_R"
           coscmd upload  elasticsearch-7.13.2-linux-x86_64.tar.gz /wall-download/elasticsearch-7.13.2-linux-x86_64.tar.gz
